Updated build to Java 11.